增加user操作